fix : alignment in profile

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -3,12 +3,15 @@
     justify-content: space-between;
     
 }
+#main-content{
+    max-width: 720px;
+    margin: auto;
+}
 main{
     flex: 3;
     min-height: 100vh;
     background-color: white;
     flex-shrink: 5;
-    padding: 0px 20px;
 }
 @media only screen and (max-width: 768px){
     main{
