--- a/src/pages/profile/components/profile-header/ProfileHeader.css
+++ b/src/pages/profile/components/profile-header/ProfileHeader.css
@@ -7,8 +7,7 @@
     margin-right: 40px;
 }
 #profile-header{
-    padding: 20px;
-    padding-bottom: 40px;
+    width: 100%;
     
 }
 #profile-header img{
