--- a/src/pages/profile/components/profile-nav/ProfileNav.css
+++ b/src/pages/profile/components/profile-nav/ProfileNav.css
@@ -5,7 +5,7 @@
 }
 #profile-nav{
     width: calc(100% - 20px);
-    margin: auto;
+    margin:20px auto;
     height: 50px;
     display: flex;
     justify-content: center;
@@ -34,4 +34,15 @@
     width: 140px;
     background-color: black;
     transition: all 0.2s;
+}
+@media only screen and (max-width: 768px){
+    #profile-nav ul{
+        width: 100%;
+    }
+    #profile-nav ul li{
+        width: 33.3%;
+    }
+    #active-nav{
+        width: 33.3%;
+    }
 }
